Add full music track

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <img class="music-on" src="icons/sound-on.svg" />
             <img class="music-off" src="icons/sound-off.svg" />
             <audio loop>
-                <source src="music.mp3" type="audio/mpeg">
+                <source src="full-music.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
