--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         .hotspot {
             position: absolute;
-            //outline: 2px red dashed;
+            outline: 2px red dashed;
             cursor: pointer;
             transition: opacity 0.25s ease;
             border-radius: 5px;
